tests/ui/type-alias-impl-trait/define_opaques_attr/invalid_path.stderr
error[E0412]: cannot find type alias or associated type with opaqaue types `Boom` in this scope
  --> $DIR/invalid_path.rs:3:18
   |
LL | #[define_opaques(Boom)]
   |                  ^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
